unpackaged/main/default/objects/Project_Team__c/fields/My_Responsability__c.field-meta.xml
<CustomField>
    <fullName>My_Responsability__c</fullName>
    <formula>OR(
 Team_Member__c = $User.Id,
 Team_Member__r.ManagerId = $User.Id,
 Team_Member__r.Manager.ManagerId = $User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Responsability</label>
    <type>Checkbox</type>
</CustomField>