unpackaged/main/default/objects/Project_Team__c/fields/Team_Member_Active_User__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Active_User__c</fullName>
    <formula>Team_Member__r.IsActive</formula>
    <label>Team Member Active User</label>
    <type>Checkbox</type>
</CustomField>