unpackaged/main/default/objects/Project_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Technical Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Injection Molding Specialist</fullName>
            </value>
            <value>
                <fullName>Enterprise Account Manager</fullName>
            </value>
            <value>
                <fullName>Customer Success Account Manager</fullName>
                <isActive>false</isActive>
                <label>Customer Success Account Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>